src/objects/inscor__Labor_Entry__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Company_Currency__c</fullName>
        <formula>inscor__Work_Order_Task__r.inscor__Company_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Company_Skill_Rate__c</fullName>
        <formula>inscor__Default_Skill_Rate__c /  BLANKVALUE(  inscor__Exchange_Rate__c , 1)</formula>
        <label>Default Company Skill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Skill_Rate__c</fullName>
        <label>Default Skill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Employee_Hourly_Rate__c</fullName>
        <label>Employee Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Employee_Name__c</fullName>
        <formula>inscor__Employee__r.inscor__Employee_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>inscor__Employee__c</referenceTo>
        <relationshipLabel>Labor Entries</relationshipLabel>
        <relationshipName>Labor_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Entry_Total_Company_Value__c</fullName>
        <formula>inscor__Entry_Total_Value__c /  BLANKVALUE(  inscor__Exchange_Rate__c , 1)</formula>
        <label>Entry Total Company Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Entry_Total_Cost__c</fullName>
        <formula>IF( OR(ISBLANK( inscor__Employee_Hourly_Rate__c), inscor__Employee_Hourly_Rate__c &lt;= 0)  ,  inscor__Task_Skill_Burden_Rate__c , inscor__Employee_Hourly_Rate__c) * inscor__Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entry Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Entry_Total_Value__c</fullName>
        <formula>inscor__Default_Skill_Rate__c *  inscor__Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entry Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Hours_Billed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Billed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Hours_Unbilled__c</fullName>
        <formula>inscor__Hours__c -  inscor__Hours_Billed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Unbilled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Hours__c</fullName>
        <formula>ROUND((inscor__End_Time__c - inscor__Start_Time__c) * 2.4, 3) * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>inscor__Invoice_Line__c</referenceTo>
        <relationshipLabel>Labor Entries</relationshipLabel>
        <relationshipName>Labor_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Rate_Date__c</fullName>
        <label>Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>inscor__Skill__c</referenceTo>
        <relationshipLabel>Labor Entries</relationshipLabel>
        <relationshipName>Labor_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Task_Skill_Burden_Rate__c</fullName>
        <formula>inscor__Work_Order_Task_Skill__r.inscor__Burden_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Skill Burden Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task_Skill__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Work Order Task Skill</label>
        <referenceTo>inscor__Work_Order_Task_Skill__c</referenceTo>
        <relationshipLabel>Labor Entries</relationshipLabel>
        <relationshipName>Labor_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task__c</fullName>
        <label>Work Order Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Labor Entries</relationshipLabel>
        <relationshipName>Labor_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Labor Entry</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Start_Time__c</columns>
        <columns>inscor__End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inscor__Clocked_In</fullName>
        <columns>NAME</columns>
        <columns>inscor__Work_Order_Task__c</columns>
        <columns>inscor__Work_Order_Task_Skill__c</columns>
        <columns>inscor__Employee__c</columns>
        <columns>inscor__Employee_Name__c</columns>
        <columns>inscor__Skill__c</columns>
        <columns>inscor__Start_Time__c</columns>
        <columns>inscor__End_Time__c</columns>
        <columns>inscor__Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__End_Time__c</field>
            <operation>equals</operation>
        </filters>
        <label>Clocked In</label>
    </listViews>
    <nameField>
        <displayFormat>LEID-{0}</displayFormat>
        <label>Labor Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labor Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inscor__Start_Date_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Start_Time__c &gt;  inscor__End_Time__c</errorConditionFormula>
        <errorMessage>Start Time must be before End Time</errorMessage>
    </validationRules>
</CustomObject>